# messenger2017

client/core/: CMakeLists.txt
client/core/include/: abstract_manager.h  contact_manager.h  core.h  error.h  file_manager.h  login_manager.h
client/core/src/: abstract_manager.cpp  contact_manager.cpp  core.cpp  file_manager.cpp  login_manager.cpp
client/core/tests/: CMakeLists.txt  test.cpp
client/gui/src/: main.cpp
shared/include/: crypto_pki.h
shared/src/: base64.cpp  crypto_pki.cpp  http_connection.cpp
test/: server_test.py
